# AgriConnect

./: .dockerignore  .env  CONTRIBUTING.md  Dockerfile  LICENCE.md  LICENSE  Makefile  README.md  Readme.MD  arch.ini  benchmark_results.md  bourseFaille.py  code.py  config.py  langgraphBasics.ipynb  main.py  orchestration_report.json  pyproject.toml  requirements.txt  sona.py  sonagess_checkpoint.json  sonagess_index.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  api.py  docker-compose.yml  docker-compose_monolith.yml  main.py  pyproject.toml  tmp_import_check.py
backend/docs/: ARCHITECTURE.md  ARCHITECTURE_2.0.md  DEPLOYMENT.md  GUIDE_UTILISATION.md  project_philosophy.md
backend/eval/: evaluation_report.json  evaluation_report.txt
backend/rag_db/: index_store.json
backend/scripts/: import_check.py  import_check_context_optimizer.py  import_check_formation.py  import_check_refine.py
backend/sources/: resource_catalog.json
backend/sources/raw_data/: meteo_burkina_latest.json  scraping_report_20260203_003223.html
backend/sources/raw_data/fao_publications/: cb1447fr_metadata.json  cb9479fr_metadata.json  cc8166en_metadata.json  cd3185en_metadata.json  cd4313en_metadata.json  cd4965en_metadata.json  cd7304en_metadata.json
backend/sources/raw_data/google_workspace/: gform_94214.json
backend/sources/raw_data/meteo/: bassin_coton_ouest.json  bassin_soja_est.json  pole_agro_industriel_sud.json  resilience_sahelienne_nord.json  verger_kou_bobo.json  zone_cerealiere_ouest.json  zone_maraichere_loumbila.json
backend/sources/raw_data/news_articles/: article_0164d4f1f212.txt  article_0164d4f1f212_meta.json  article_49006b1407d5.txt  article_49006b1407d5_meta.json  article_a989b3c151eb.txt  article_a989b3c151eb_meta.json  article_da3be8b3cdae.txt  article_da3be8b3cdae_meta.json
backend/sources/raw_data/soil_grids/: bassin_coton_ouest.json  bassin_soja_est.json  pole_agro_industriel_sud.json  resilience_sahelienne_nord.json  verger_kou_bobo.json  zone_cerealiere_ouest.json  zone_maraichere_loumbila.json
backend/sources/raw_data/technical_resources/: exploration_034a5d15b37a.json  exploration_52c58ecff7a2.json  exploration_a2311b422e4e.json  exploration_a8af1f9447db.json  exploration_c130f45df3a3.json  exploration_d60d8563024a.json
backend/src/: __init__.py
backend/src/agriconnect/: .env.example  config.py  main.py  worker.py
backend/src/agriconnect/api/: __init__.py  routes.py  schemas.py
backend/src/agriconnect/core/: __init__.py  agent_registry.py  database.py  logger.py  security.py  settings.py  setup.py  tracing.py  watcher.py
backend/src/agriconnect/database/: apply_migration.py  audit_trail.sql  enable_pgvector.sql  init.sql  marketplace.sql  marketplace_tables_clean.sql  memory_migration.sql  patch_add_userid_conversations.sql  protocol_tables.sql
backend/src/agriconnect/graphs/: __init__.py  message_flow.py  message_flow_helpers.py  message_flow_parallel.py  message_flow_router.py  prompts.py  state.py
backend/src/agriconnect/orchestrator/: README.md  __init__.py  intention.py  main_orchestrator.py  report_flow.py
backend/src/agriconnect/protocols/: __init__.py  core.py  observability.py
backend/src/agriconnect/rag/: README.md  __init__.py  components.py  config.py  ingestor.py  metric.py  orchestrator.py  retriever.py
backend/src/agriconnect/scripts/: __init__.py  check_tables.py  extract_vcf_to_csv.py  fix_climatic_regions.py  init_marketplace_tables.py  patch_marketplace_tables.py  run_evaluation.py  seed_db.py  seed_zones.py  validate_alignment.py  verify_database.py
backend/src/agriconnect/services/: __init__.py  broadcaster.py  db_handler.py  llm_clients.py  models.py  persistence.py  voice.py  voice_engine.py
backend/src/agriconnect/tools/: __init__.py  crop.py  db_handler.py  flood_risk.py  formation.py  health.py  market.py  marketplace.py  meteo.py  refine.py  sentinelle.py  shared_math.py  soil.py  subvention.py
backend/src/agriconnect/utils/: off_topic_guard.py  practical_details_enricher.py  sms_adapter.py  typo_corrector.py
backend/src/agriconnect/workers/: __init__.py  celery_app.py  celery_config.py  task_base.py
backend/tests/: __init__.py  conftest.py  test_agriscope.py  test_database.py  test_documents_meteo.py  test_imports.py  test_langsmith_agents.py  test_mcp_agui.py  test_message_flow.py  test_protocols.py  test_resource_manager.py  test_sonagess.py  test_voice.py  test_weather_forecast.py
backend/tests/langsmith/: __init__.py  datasets.py  evaluators.py
backend/tests/tools/: test_crop_tool.py  test_fews_pdf_harvester.py  test_fews_scraper.py  test_flood_risk_tool.py  test_formation_tool.py  test_health_tool.py  test_market_tool.py  test_marketplace_tool.py  test_meteo_tool.py  test_refine_tool.py  test_sentinelle_tool.py  test_shared_math.py  test_soil_tool.py  test_subvention_tool.py  test_tools_db_handler.py  test_workers_voice.py
rag/: README.md  (+28 more)
(+470 files in other folders)
