[tool.poetry]
name = "agriconnect-backend"
version = "1.0.0"
description = "Event-Driven Modular Monolith - Agriculture AI Assistant"
authors = ["IDOEFRAIM <idoefraimtanka@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "agriconnect", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "^2.1"
pypdf = ">=5.1.0,<7"
playwright = "^1.45"
PyMuPDF = "^1.24"
sentence-transformers = "*"
tqdm = "^4.66"
pydantic = "^2.0"
httpx = "^0.27"
shapely = "^2.0"
pillow = "^10.0"
loguru = "^0.7"
aiofiles = "^23.1"
pdfminer-six = "^20221105"
pytest = "^7.0"
# Additional dependencies requested for Agri-OS
gtts = "^2.4"
openai-whisper = "*"
pydub = "^0.25"
langdetect = "^1.0"

# --- Web Framework ---
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
python-multipart = ">=0.0.18"
aiohttp = "^3.9"

# --- Event-Driven (Celery + Redis) ---
celery = {extras = ["redis"], version = "^5.4"}
redis = "^5.0"
flower = "^2.0"  # Monitoring Celery

# --- Database ---
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"  # PostgreSQL async driver
psycopg2-binary = "^2.9"
alembic = "^1.13"  # Migrations
pgvector = "^0.3"  # Vector extension
prisma = "^0.11"

# --- AI/ML ---
torch = "^2.2"

# --- LlamaIndex et Faiss ---
llama-index = "^0.13.0"
llama-index-core = "^0.13.0"
llama-index-vector-stores-faiss = "^0.5.2"
llama-index-vector-stores-hnswlib = "*"
llama-index-embeddings-huggingface = "*"
llama-index-embeddings-openai = "*"
faiss-cpu = "^1.8.0"
pymilvus = "^2.4"
aioredis = "^2.0"
srsly = "^2.5.0"
spacy = "^3.7"
langgraph = ">=0.2"
langchain = "^0.3"
langchain-community = "^0.3"
langchain-openai = "^0.2"
langchain-groq = "^0.2"
scikit-learn = "^1.5"

# --- Azure Services ---
azure-cognitiveservices-speech = "^1.40"
azure-storage-blob = "^12.23"
azure-identity = "^1.19"
boto3 = "^1.34"

# --- WhatsApp (Twilio) ---
twilio = "^9.3"

# --- Monitoring & Observability ---
structlog = "^24.4"
prometheus-client = "^0.21"
langsmith = ">=0.1.0"
sentry-sdk = "^1.39"
python-json-logger = "^2.0"

# --- Environment & Config ---
python-dotenv = "^1.0"
pydantic-settings = "^2.6"

# --- Utils ---
requests = "^2.32.5"
apscheduler = "^3.11.2"
gradio = "^6.3.0"
beautifulsoup4 = "^4.14.3"
groq = ">=0.30.0,<1.0.0"
earthengine-api = "^1.7.10"
# removed: psycopg2 source build (use psycopg2-binary)
pandas = "^2.1"
geopy = "^2.4"
pytest-asyncio = "^0.21"
gunicorn = "^21.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
